force-app/main/default/objects/Eng_VP__c/Eng_VP__c.object-meta.xml
<CustomObject>
    <label>Engagement Valuation Period</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Valuation Periods</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>