force-app/main/default/objects/Eng_VP__c/fields/Client_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Client_Complexity__c</fullName>
    <description>Client Complexity (1-5, 5 being the highest degree of complexity)</description>
    <inlineHelpText>Client Complexity (1-5, 5 being the highest degree of complexity)</inlineHelpText>
    <label>Client Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>