force-app/main/default/objects/Eng_VP__c/fields/Client_Draft_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Client_Draft_Deadline__c</fullName>
    <label>Client Draft Deadline</label>
    <type>Date</type>
</CustomField>