force-app/main/default/objects/Eng_VP__c/fields/Client_Final_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Client_Final_Deadline__c</fullName>
    <label>Client Final Deadline</label>
    <type>Date</type>
</CustomField>