force-app/main/default/objects/Eng_VP__c/fields/ClientStartDate__c.field-meta.xml
<CustomField>
    <fullName>ClientStartDate__c</fullName>
    <label>Client Start Date</label>
    <type>Date</type>
</CustomField>