force-app/main/default/objects/Eng_VP__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Engagement Valuation Periods</relationshipLabel>
    <relationshipName>Engagement_Portfolio_Valuations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>