force-app/main/default/objects/Eng_VP__c/fields/Engagement_Letter_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Letter_Signed_Date__c</fullName>
    <formula>Engagement__r.Date_Engaged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Letter Signed Date</label>
    <type>Date</type>
</CustomField>