force-app/main/default/objects/Eng_VP__c/fields/Engagement_Stage__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Stage__c</fullName>
    <formula>Text(Engagement__r.Stage__c)</formula>
    <label>Engagement Stage</label>
    <type>Text</type>
</CustomField>