force-app/main/default/objects/Eng_VP__c/fields/Fee_Notes_Description__c.field-meta.xml
<CustomField>
    <fullName>Fee_Notes_Description__c</fullName>
    <label>Fee Notes &amp; Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>