force-app/main/default/objects/Eng_VP__c/fields/Hours_per_Investment_Associate__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_Investment_Associate__c</fullName>
    <label>Hours per Investment - Associate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>