force-app/main/default/objects/Eng_VP__c/fields/Invoices__c.field-meta.xml
<CustomField>
    <fullName>Invoices__c</fullName>
    <description>New field for  DMND0025003 to add along with new  field Last Modified</description>
    <label>Invoice(s)</label>
    <type>TextArea</type>
</CustomField>