force-app/main/default/objects/Eng_VP__c/fields/Last_Position_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Position_Completed_Date__c</fullName>
    <label>Last Position Completed Date</label>
    <type>DateTime</type>
</CustomField>