force-app/main/default/objects/Eng_VP__c/fields/Main_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Main_Contract_Number__c</fullName>
    <formula>Engagement__r.Main_Contract_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Contract Number</label>
    <type>Text</type>
</CustomField>