force-app/main/default/objects/Eng_VP__c/fields/Overall_VP_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_VP_Status__c</fullName>
    <label>Overall Valuation Period Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>