force-app/main/default/objects/Eng_VP__c/fields/Parent_Currency_Formula__c.field-meta.xml
<CustomField>
    <fullName>Parent_Currency_Formula__c</fullName>
    <formula>TEXT( Engagement__r.CurrencyIsoCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Currency Formula</label>
    <type>Text</type>
</CustomField>