force-app/main/default/objects/Eng_VP__c/fields/Total_Fee_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee_Completed__c</fullName>
    <label>Total Fee Completed</label>
    <summarizedField>Eng_VP_Position__c.Fee_Completed__c</summarizedField>
    <summaryFilterItems>
        <field>Eng_VP_Position__c.Status__c</field>
        <operation>equals</operation>
        <value>&quot;Completed, Generate Accrual&quot;</value>
    </summaryFilterItems>
    <summaryForeignKey>Eng_VP_Position__c.Engagement_VP__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>