force-app/main/default/objects/Eng_VP__c/validationRules/FeeTotalFieldValidation_EngVP.validationRule-meta.xml
<ValidationRule>
    <fullName>FeeTotalFieldValidation_EngVP</fullName>
    <active>false</active>
    <description>Fee Total can not be negative.</description>
    <errorConditionFormula>IF( Fee_Total__c &lt; 0 , true, false )</errorConditionFormula>
    <errorMessage>Fee Total field value can not be negative</errorMessage>
</ValidationRule>