force-app/main/default/objects/Eng_VP__c/validationRules/HL_Engagement_Change_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_Engagement_Change_Not_Allowed</fullName>
    <active>true</active>
    <description>To stop changing Engagement on Engagement Valuation Period.</description>
    <errorConditionFormula>IF(NOT(ISNEW()),IF(ISCHANGED(Engagement__c), true, false), false)</errorConditionFormula>
    <errorDisplayField>Engagement__c</errorDisplayField>
    <errorMessage>You are not allowed to change &apos;Engagement&apos;.</errorMessage>
</ValidationRule>